Bug 319231 - Plasma crashes after adding pager widget into panel
Summary: Plasma crashes after adding pager widget into panel
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-pager (other bugs)
Version First Reported In: 4.10.2
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-02 16:41 UTC by Ľubomír Kučera
Modified: 2013-11-26 23:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.4
Sentry Crash Report:


Attachments
Backtrace (13.81 KB, text/plain)
2013-07-05 10:14 UTC, Ľubomír Kučera
Details
add pager widget crash (28.77 KB, text/plain)
2013-10-13 09:36 UTC, Travis Evans
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ľubomír Kučera 2013-05-02 16:41:54 UTC
Plasma crashes after adding pager widget into panel with two or more virtual desktops active. Desktops have default names ("Desktop 1", "Desktop 2" and so on...).

Reproducible: Always

Steps to Reproduce:
1. Add two or more virtual desktops in settings
2. Add pager widget into Panel
Actual Results:  
Plasma crashed and pager widget is not present in panel after reset of plasma

Expected Results:  
Pager widget should be added into panel

System: Arch linux, KDE 4.10.2, Desktop theme: Shadowed
Comment 1 Jekyll Wu 2013-05-03 05:18:32 UTC
Could you provide the backtrace ?
Comment 2 Ľubomír Kučera 2013-07-03 19:05:46 UTC
I am sorry but I cannot. There is no dialog after crash.
Comment 3 Jekyll Wu 2013-07-05 01:51:07 UTC
well, try this in konsole :

$ kquitapp plasma-desktop
$ sleep 5
$ gdb `which plasma-desktop`
gdb > set args --nofork
gdb > run
..... make plasma crash ...
gdb > bt

see http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports#Retrieving_a_backtrace_with_GDB for more information.
Comment 4 Ľubomír Kučera 2013-07-05 10:14:06 UTC
Created attachment 80961 [details]
Backtrace
Comment 5 Ľubomír Kučera 2013-07-05 10:14:40 UTC
Here it is.
Comment 6 Jekyll Wu 2013-07-05 13:16:54 UTC
> #0  0x00007fff3bd130fd in ?? () from /usr/lib/kde4/plasma_applet_pager.so

yes, it is . Too bad, Archlinux doesn't provide debug symbols so the backtrace is barely useful.
Comment 7 Ann 2013-09-24 21:30:50 UTC
It's been a while since this report, but I can also confirm it.

I'm using Arch Linux with KDE 4.11.1-2. I don't really know since when I have this issue, because just until recently I had the icon from more than a year ago in the panel. But for a long time the icon  in the panel looked bad (it was more up than centered, if you understand - it looked normal when I changed the plasma theme, but until next reboot), so I decided to remove it and place it again, and discovered that it crashed the plasma desktop. It's as the OP describes it.

If I place it in the desktop, it's fine, but it crashes when I try to place it in the panel.
Comment 8 Ann 2013-09-24 21:38:11 UTC
Possible workaround: Place the widget in the desktop, and move it until you reach the panel, it will place it there automatically without crashing.
Comment 9 Travis Evans 2013-10-13 09:36:39 UTC
Created attachment 82820 [details]
add pager widget crash

I'm encountering this on KDE 4.11.2, also in Arch Linux. I was able to rebuild plasma-desktop and qt4 with debugging and get this backtrace.
Comment 10 Christoph Feck 2013-11-26 23:37:58 UTC
Git commit 201c66ce97bf683d818d2cd6ca0e9afd38c7ed93 by Christoph Feck.
Committed on 26/11/2013 at 23:35.
Pushed by cfeck into branch 'KDE/4.11'.

Fix pager tooltip crash when there are no windows

REVIEW: 114059
Related: bug 321086
FIXED-IN: 4.11.4

M  +8    -1    plasma/desktop/applets/pager/model.cpp
M  +2    -1    plasma/desktop/applets/pager/pager.cpp

http://commits.kde.org/kde-workspace/201c66ce97bf683d818d2cd6ca0e9afd38c7ed93