Fix pager tooltip crash when there are no windows

REVIEW: 114059
BUG: 319231
BUG: 321086
FIXED-IN: 4.11.4